fix: dark mode link color error

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,13 +23,7 @@ body {
   background-size: auto calc(150 * var(--cmpx));
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-image: none;
-    background-color: var(--dark);
-    color: var(--light);
-  }
-}
+
 
 nav {
 }
@@ -56,7 +50,6 @@ nav > ul > li {
 }
 
 nav > ul > li > a {
-  color: var(--dark);
   text-decoration: none;
 }
 
@@ -204,4 +197,15 @@ img {
 
 .pcenter {
   text-align: center;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: none;
+    background-color: var(--dark);
+    color: var(--light);
+  }
+  a {
+    color: var(--light);
+  }
 }
